# libffi-demo

./: CMakeLists.txt  Makefile  README.md  main.c  main_closure.c  main_ffi.c
